@@ -1,50 +1,44 @@
 package li.cil.tis3d.data.neoforge;
 
-import com.google.common.collect.Sets;
 import li.cil.tis3d.api.API;
 import li.cil.tis3d.common.block.Blocks;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.storage.loot.*;
+import net.minecraft.world.level.storage.loot.BuiltInLootTables;
+import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 public final class ModLootTableProvider extends LootTableProvider {
-    public ModLootTableProvider(final PackOutput packOutput) {
-        super(packOutput, Collections.emptySet(), Collections.emptyList());
+    public ModLootTableProvider(final PackOutput packOutput, final CompletableFuture<HolderLookup.Provider> registries) {
+        super(packOutput,
+            requiredTables(),
+            List.of(new SubProviderEntry(ModBlockLootTables::new, LootContextParamSets.BLOCK)),
+            registries);
     }
 
-    @Override
-    protected void validate(final Map<ResourceLocation, LootTable> map, final ValidationContext validationContext) {
-        final Set<ResourceLocation> modLootTableIds =
-            BuiltInLootTables
-                .all()
-                .stream()
-                .filter(lootTable -> Objects.equals(lootTable.getNamespace(), API.MOD_ID))
-                .collect(Collectors.toSet());
-
-        for (final ResourceLocation id : Sets.difference(modLootTableIds, map.keySet()))
-            validationContext.reportProblem("Missing mod loot table: " + id);
-
-        map.forEach((location, table) -> table.validate(validationContext.setParams(table.getParamSet()).enterElement("{" + location + "}", new LootDataId<>(LootDataType.TABLE, location))));
-    }
-
-    @Override
-    public List<LootTableProvider.SubProviderEntry> getTables() {
-        return Collections.singletonList(new SubProviderEntry(ModBlockLootTables::new, LootContextParamSets.BLOCK));
+    private static Set<ResourceKey<LootTable>> requiredTables() {
+        return BuiltInLootTables
+            .all()
+            .stream()
+            .filter(table -> Objects.equals(table.location().getNamespace(), API.MOD_ID))
+            .collect(Collectors.toSet());
     }
 
     public static final class ModBlockLootTables extends BlockLootSubProvider {
-        public ModBlockLootTables() {
-            super(Collections.emptySet(), FeatureFlags.REGISTRY.allFlags());
+        public ModBlockLootTables(final HolderLookup.Provider registries) {
+            super(Collections.emptySet(), FeatureFlags.REGISTRY.allFlags(), registries);
         }
 
         @Override
